[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/menu/Dungeon.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Mobile RPG Mockup.png" type="Texture" id=3]
[ext_resource path="res://Battle.gd" type="Script" id=4]

[node name="Battle" type="Node2D"]
script = ExtResource( 4 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45.1455, 80.3499 )
texture = ExtResource( 2 )

[node name="Mobile RPG Mockup" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 45.4723, 80.4355 )
texture = ExtResource( 3 )

[node name="Enemy" parent="." instance=ExtResource( 1 )]
position = Vector2( 45, 47 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 3.2019
margin_top = 83.0758
margin_right = 88.2019
margin_bottom = 101.076
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TechButton" type="Button" parent="UI"]
margin_left = 4.03232
margin_top = 104.322
margin_right = 43.0323
margin_bottom = 118.322
text = "Technique"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagicButton" type="Button" parent="UI"]
margin_left = 47.5673
margin_top = 104.322
margin_right = 86.5673
margin_bottom = 118.322
text = "Magic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemButton" type="Button" parent="UI"]
margin_left = 4.03232
margin_top = 120.814
margin_right = 43.0323
margin_bottom = 134.814
text = "Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FleeButton" type="Button" parent="UI"]
margin_left = 47.8995
margin_top = 120.814
margin_right = 86.8995
margin_bottom = 134.814
text = "Flee"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_left = -1.78536
margin_top = 138.859
margin_right = 92.2146
margin_bottom = 161.859
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="death" from="Enemy" to="." method="_on_Enemy_death"]
[connection signal="pressed" from="UI/TechButton" to="." method="_on_SwordButton_pressed"]
